{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 631,
  "lineage": "65ea2e73-352d-b005-3c8c-c6b867d66309",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wordpress_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377122181:internet-gateway/igw-0d7e0e26d80078ec2",
            "id": "igw-0d7e0e26d80078ec2",
            "owner_id": "891377122181",
            "tags": {
              "Name": "wordpress_igw"
            },
            "tags_all": {
              "Name": "wordpress_igw"
            },
            "vpc_id": "vpc-07295ee88b3491406"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "wordpress_routetointernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d7e0e26d80078ec2",
            "id": "r-rtb-0592de3447338a35d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0592de3447338a35d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wordpress_igw",
            "aws_route_table.wordpress_rt",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wordpress_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377122181:route-table/rtb-0592de3447338a35d",
            "id": "rtb-0592de3447338a35d",
            "owner_id": "891377122181",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wordpress_rt"
            },
            "tags_all": {
              "Name": "wordpress_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07295ee88b3491406"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wordpress_pub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0311f7626fbcde362",
            "route_table_id": "rtb-0592de3447338a35d",
            "subnet_id": "subnet-0a7fd39564e14e0ea"
          },
          "dependencies": [
            "aws_route_table.wordpress_rt",
            "aws_subnet.wordpress_public_subnet",
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wordpress_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377122181:subnet/subnet-0a7fd39564e14e0ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7fd39564e14e0ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377122181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress_public_subnet"
            },
            "tags_all": {
              "Name": "wordpress_public_subnet"
            },
            "vpc_id": "vpc-07295ee88b3491406"
          },
          "dependencies": [
            "aws_vpc.wordpress_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377122181:vpc/vpc-07295ee88b3491406",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a53cbead2d88feda",
            "default_route_table_id": "rtb-051c65acdc16e43d0",
            "default_security_group_id": "sg-0ca940de6879ab470",
            "dhcp_options_id": "dopt-0076915d9e4739b3a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07295ee88b3491406",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051c65acdc16e43d0",
            "owner_id": "891377122181",
            "tags": {
              "Name": "wordpress_vpc"
            },
            "tags_all": {
              "Name": "wordpress_vpc"
            }
          }
        }
      ]
    }
  ]
}